[metadata]
name = SPED
version = 0.1
description = SPED is.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anselmobattisti/sped/
project_urls =
    Bug Tracker = https://github.com/anselmobattisti/sped/issues
author = Anselmo Battisti
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    SPED
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
SPED = py.typed

[flake8]
max-line-length = 160